    (Duke via cutting)

    AVRO-1225. Java: Add guide for MapReduce API. (Brock Noland via cutting)

    AVRO-1426. Java: Add mapreduce word count example.
    (Jesse Anderson via cutting)

    AVRO-987. Java: Make Avro OSGI-ready. (Ioannis Canellos via cutting)

    AVRO-1427. Java: Improve ResolvingDecoder tests. (Rob Turner via cutting)

  BUG FIXES

    AVRO-1368. Fix SpecificDatumWriter to, when writing a string
    schema, not silently convert any object to a string.
    (Christophe Taton via cutting)

    AVRO-1374. Java: Fix compilation against Hadoop 2.1.
    (Julian Zhou via cutting)

    AVRO-1366. Fix specification's description of metadata format.
    (cutting)

    AVRO-1377. Java: Fix a bug in Schema#toString() when a namespaced
    enum or fixed is defined within an un-namespaced record.
    (Graham Sanderson via cutting)

    AVRO-1399. Java: Fix a test within TestAvroKeyOutputFormat.
    (Rob Turner via cutting)

    AVRO-1410. Explicit version specification in pom prevents dependency
    management. (Eric Sammer via tomwhite)

    AVRO-1358. C: Hide symbols that aren't in the public API. (dcreager)

    AVRO-1237. C: Bounds-check union discriminant when reading a data file.
    (Michael Cooper via dcreager)

    AVRO-1369. C: Use correct byte-swapping functions on Mac OS X.
    (thinker0 via dcreager)

    AVRO-1405. C: Check for end-of-file correctly.
    (Mika Ristimaki via dcreager)

    AVRO-1424. ValidatingDecoder hangs on large schema (thiru)

Avro 1.7.5 (12 August 2013)

  NEW FEATURES

    AVRO-1307. Java: Add 'cat' tool to append and sample data files.
    (Vincenz Priesnitz via cutting)

    AVRO-1274. Java: Add a schema builder API. (tomwhite)

    AVRO-1319. Java: Add command line tools to generate random data
    files and to convert Avro to Trevni.  (cutting)

    AVRO-823: C#: Add data file support. (David McIntosh via cutting)

    AVRO-896. C: Snappy compression codec. (Grisha Trubetskoy via dcreager)
