@@ -38,7 +38,7 @@ import org.apache.hadoop.io.serializer.Serializer;
  * class.</p>
  *
  * <p>MapReduce jobs that use AvroWrapper objects as keys or values need to be configured
- * with {@link org.apache.avro.io.AvroSerialization}.  Use {@link
+ * with {@link AvroSerialization}.  Use {@link
  * org.apache.avro.mapreduce.AvroJob} to help with Job configuration.</p>
  *
  * @param <T> The Java type of the Avro data.
