@@ -72,6 +72,7 @@
     <jar-plugin.version>2.3.2</jar-plugin.version>
     <javacc-plugin.version>2.6</javacc-plugin.version>
     <javadoc-plugin.version>2.8</javadoc-plugin.version>
+    <plugin-tools-javadoc.version>3.2</plugin-tools-javadoc.version>
     <maven-site-plugin.version>3.1</maven-site-plugin.version>
     <plugin-plugin.version>2.9</plugin-plugin.version>
     <source-plugin.version>2.1.2</source-plugin.version>
@@ -236,10 +237,17 @@
           <version>${javadoc-plugin.version}</version>
           <configuration>
             <links>
-              <link>http://jackson.codehaus.org/${jackson.version}/javadoc/</link>
+              <link>http://jackson.codehaus.org/1.9.4/javadoc/</link>
               <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
-              <link>http://hadoop.apache.org/common/docs/r${hadoop1.version}/api/</link>
+              <link>http://hadoop.apache.org/common/docs/current/api/</link>
             </links>
+            <tagletArtifacts>
+              <tagletArtifact>
+                <groupId>org.apache.maven.plugin-tools</groupId>
+                <artifactId>maven-plugin-tools-javadoc</artifactId>
+                <version>${plugin-tools-javadoc.version}</version>
+              </tagletArtifact>
+            </tagletArtifacts>
           </configuration>
         </plugin>
         <plugin>
