@@ -82,6 +82,8 @@ Trunk (not yet released)
 
     AVRO-1427. Java: Improve ResolvingDecoder tests. (Rob Turner via cutting)
 
+    AVRO-1432. Java: Reduce javadoc warnings. (cutting)
+
   BUG FIXES
 
     AVRO-1368. Fix SpecificDatumWriter to, when writing a string
